--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,3 @@
-body {
-	background: #bceae8 !important;
-	font-family: Arial;
-	}
-
 .container {
 	margin-bottom: 40px;
 	margin-left: 10px;
@@ -32,24 +27,24 @@ button:not(.privacyButton) {
 	}
 
 .TOC {
-	float: left;
-	border: 2px solid black;
-	width: 150px;
-	height: 250px;
-	margin-left: 20px;
-	position: fixed;
-	right: 5px;
-	bottom: 5px;
-	background: #A7D4D2;
+  border: 2px solid #000;
+  width: 150px; 
+  height: 250px;
+  position: fixed;
+  right: 5px;
+  bottom: 5px;
+  text-align: center;
+  background: #A7D4D2;
 	line-height: 20px;
 	}
 
 .label {
-	margin-left: 10px
+	margin-left: 10px;
+  color: black;
 	}
 
 .PageLink:link, .PageLink:visited {
-	color: inherit;
+	color: black;
 	background-color: transparent;
 	text-decoration: underline;
 	}
