--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,12 +45,11 @@ button:not(.privacyButton) {
 	}
 
 .label {
-	margin-left: 10px;
-  color: black;
+	margin-left: 10px
 	}
 
 .PageLink:link, .PageLink:visited {
-	color: black;
+	color: inherit;
 	background-color: transparent;
 	text-decoration: underline;
 	}
